<resources>
    <string name="app_name">GlowUp</string>
    <string name="home">Home</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="ask_fm_v001_0">Ask.fm v001.0</string>
    <string name="logo">TODO</string>
    <string name="hi_beauty">Hi Beauty,</string>
    <string name="logoo">TODO</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Enter Your Name</string>
    <string name="hi_beautyy">Hi, Beauty</string>
    <string name="welcomee">Welcome!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="hi_beautyyy">Hi, Beauty</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_again">Welcome Again!</string>
    <string name="hi_beautyylogin">Hi Beauty,</string>
    <string name="password">Password</string>
    <string name="enter_your_email_or_username">Enter Your Email or Username</string>
    <string name="login">Login</string>
    <string name="logologin">TODO</string>
    <string name="todo">TODO</string>
    <string name="trending_playlist">Trending Playlist</string>
    <string name="newest_article">Newest Article</string>
    <string name="home_icon">home_icon</string>
    <string name="tipsntrict_icon">tipsntrict_icon</string>
    <string name="journal_icon">journal_icon</string>
    <string name="profile_icon">profile_icon</string>
    <string name="image_slider">image_slider</string>
    <string name="beauty_timer">beauty_timer</string>
    <string name="beauty_calendar">beauty_calendar</string>
    <string name="reminder">reminder</string>
    <string name="beauty_playlist">beauty_playlist</string>
    <string name="new_article">new_article</string>
    <string name="tipstricks">Tips n Tricks</string>
    <string name="category2">Skincare</string>
    <string name="author2">Lala Franka</string>
    <string name="title_article2">Simple Night Skincare Routine, Amazing Results!</string>
    <string name="date2">6 Nov 2021</string>
    <string name="description2">Glow Up - Night Skincare</string>
    <string name="content2sub1">Recommended Effective Serum for Acne Scars </string>
    <string name="content2des1">Acne can make us insecure and difficult to turn off. However, getting rid of acne scars is sometimes more difficult and longer than turning off an active pimple. To speed up the process of fading acne scars, it requires the use of proper and regular skincare. One form of skincare that can help get rid of acne scars is serum. Serums contain active ingredients and vitamins that can help get rid of acne scars.
Here are some serums to remove acne scars or so-called acne scars that you can try.</string>
    <string name="content2sub2">Axis-Y Dark Spot Correcting Glow Serum</string>
    <string name="content2des2">This serum contains Niacinamide which can reduce dark spots caused by acne and improve uneven skin tone. The plant derived Squalene content in this serum can maintain skin moisture and make skin healthier and glowing. This serum also contains Glycerin, Sodium Hyaluronate, Papaya, Propanediol, Erythritol, Butylene, and Glycol ingredients. The content of Niacinamide can also relieve redness and Calendula which is anti-inflammatory. The texture of this serum is light and easy to absorb, leaving the skin feeling moist, smooth, and not sticky.</string>
    <string name="content2sub3">Avoskin Your Skin Bae Vitamin C 3% + Niacinamide 2% + Mandarin Orange Fruit Extract Serum</string>
    <string name="content2des3">The next serum recommendation is from the Avoskin brand. Vitamin C is known to be very effective for brightening the skin and disguising acne scars. In addition to vitamin C, the content of Niacinamide, and Mandarin Orange Extract in this serum can make our skin look brighter optimally. This serum can inhibit the production of melanin in the skin, making it effective for brightening the skin.</string>
    <string name="content2sub4">SOMETHINC Niacinamide + Moisture Beet Serum</string>
    <string name="content2des4">For those of you who have acne scars in the form of post-inflammatory pigmentation, you can try this serum. Contains Niacinamide which can strengthen the skin is protective layer by producing Ceramide. Beetroot content can also ward off free radicals, moisturize the skin, fade dark spots, and fight acne.</string>
    <string name="content2sub5">Lacoco Dark Spot Essence</string>
    <string name="content2des5">The next recommended serum to fade dark spots and acne scars is Lacoco Dark Spot Essence. This product contains tranexamic acid which has the maximum ability to fade dark spots as quickly as laser technology. Then, it contains various natural ingredients that are very safe for various types of facial skin. In addition, there are mulberry extracts that function as antioxidants for the skin, licorice extracts that function to fade black spots and acne scars and brighten the face.</string>
    <string name="content2des6">Are you having trouble dealing with acne scars? Do not worry, try the serum recommendations for removing acne scars above.</string>
    <string name="category3">Hair Care</string>
    <string name="title_article3">Schedule to wash your Hair</string>
    <string name="author3">Sheira Moe</string>
    <string name="date3">23 Oct 2021</string>
    <string name="description3">Glow Up - Washing Hair</string>
    <string name="content3sub1">How often should you wash your hair </string>
    <string name="content3des1">Hair is a part of the body that needs to be cared for so that it can always be healthy. Shampooing is one of the basic things to take care of your hair by washing your hair using shampoo but washing your hair too often can cause hair damage. Here are some tips to know how often to wash your hair.</string>
    <string name="content3des2">Oily hair: It is best to shampoo daily to prevent the build up of oil and dirt.</string>
    <string name="content3des3"> Dry/damaged hair: Every 5-7 days to stimulate the hairs natural oils.</string>
    <string name="content3des4">Fine/thin hair: Shampoo daily to provide sufficient moisture to hair.</string>
    <string name="content3des5">Wavy/curly hair: Once every 4-5 days, depending on hair density</string>
    <string name="content3des6">Curly hair: Once a week for optimal hair growth.</string>
    <string name="category4">Body Care</string>
    <string name="title_article4">Benefit of Body Scrub</string>
    <string name="author4">Dena Olivia</string>
    <string name="date4">9 Oct 2021</string>
    <string name="description4">Glow Up - Body scrub</string>
    <string name="content4des1">Body scrubs are a form of exfoliation treatment. This treatment aims to remove dead skin cells from the outside while removing dust and dirt that may be trapped in the pores. skin that is not scrubbed will make the skin dull. Therefore, it is recommended to do body scrubs regularly. There are several benefits of body scrub.</string>
    <string name="content4des2">1.	Scrub granules can remove dead skin cells.</string>
    <string name="content4des3">2.	Scrub is claimed to be able to brighten the skin.</string>
    <string name="content4des4">3.	Relax the body with body scrub granules.</string>
    <string name="content4des5">4.	Exfoliate with a body scrub to prevent the appearance of acne on the back.</string>
    <string name="content4des6">5.	Body scrub is useful to overcome cellulite and prevent premature aging.</string>
    <string name="article">Article - Tips n Tricks</string>
    <string name="title">How to choose a foundation to match your skin tone</string>
    <string name="category">Make Up</string>
    <string name="author">Tiara Jehanly Biancaa</string>
    <string name="date">20 Nov 2021</string>
    <string name="photo"> </string>
    <string name="description">Glow Up - Make up foundation</string>
    <string name="content1des1">One of the must-have makeup products for women is foundation. This makeup product is very useful to make your facial skin look flawless and perfect. By applying foundation, all the flaws that exist on your facial skin such as acne scars and dark spots can be covered. However, don not make the wrong choice of foundation Here are tips for choosing a foundation.</string>
    <string name="content1des2">1.	Know your basic skin color.</string>
    <string name="content1des3">By knowing the basic color of your skin will make the foundation match your skin, choose a foundation color that is almost close to your skin color so that there is no color difference between foundation and severe skin.</string>
    <string name="content1des4">2.	Choose the type of foundation that suits your skin type.</string>
    <string name="content1des5">In addition to adjusting to skin color, you also need to choose a foundation that suits your skin type. For those of you who have oily skin types, you should not choose a foundation that is made from oily as well. But for those of you who have dry skin, you can choose a water-based foundation or one that contains a lot of moisturizers.</string>
    <string name="content1des6">3.	Choose a lighter foundation color.</string>
    <string name="content1des7">After a day of activities, the face that uses foundation will usually turn out to be duller or darker. This is because the foundation undergoes oxidation when exposed to heat, both hot from the sun and heat from body temperature. So, so that the foundation color remains good on the face even though it has been used all day, choose a foundation color that is one level lighter than skin color.</string>
    <string name="beauty_calendartext">Beauty Calendar</string>
    <string name="buttonplus">+</string>
    <string name="exfoliate">Exfoliate</string>
    <string name="face_yoga">Face Yoga</string>
    <string name="sheet_mask">Sheet Mask</string>
    <string name="add_routines">Add Routines</string>
    <string name="_9_00_3_every">9 : 00 / 3 Every</string>
    <string name="_9_00_4_every">9 : 00 / 4 Every</string>
    <string name="_9_00_6_every">9 : 00 / 6 Every</string>
    <string name="putri_aisyah_gmail_com">putri.aisyah@gmail.com</string>
    <string name="aisyahptr">aisyahptr</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="slash"><![CDATA[<]]></string>
    <string name="profile_account">Profile Account</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="start">Start</string>
    <string name="beauty_timer1">Beauty Timer</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="beauty_playlist_text">Beauty Playlist</string>
    <string name="button">Show Alert Dialog</string>
    <string name="help_glowup_com">help@glowup.com</string>
    <string name="contact_us">Contact Us:</string>
    <string name="meita_merdianti">Meita Merdianti</string>
    <string name="irine_shafana_jasmine">Irine Shafana Jasmine</string>
    <string name="what_is_glow_up">What is Glow Up?</string>
    <string name="verrani_yusti_andini">Verrani Yusti Andini</string>
</resources>