<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEB0FB"
    tools:context=".homepage">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="416dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="5dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home_icon"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/tipsntrict_icon"
            android:onClick="MoveLayout"
            app:srcCompat="@drawable/tipsntrick" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/journal_icon"
            app:srcCompat="@drawable/journal" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_icon"
            android:onClick="ProfileLayout"
            app:srcCompat="@drawable/profile"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="416dp"
        android:layout_height="646dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_slider"
                app:srcCompat="@drawable/imageslider"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/beauty_playlist"
                    app:srcCompat="@drawable/playlist" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/beauty_calendar"
                    android:onClick="CalendarLayout"
                    app:srcCompat="@drawable/calendar" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/beauty_timer"
                    android:onClick="TimerLayout"
                    app:srcCompat="@drawable/timer" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/your_reminder"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reminder"
                app:srcCompat="@drawable/imageslider"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/newest_article"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/new_article"
                android:onClick="MoveLayout"
                app:srcCompat="@drawable/imageslider"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>