<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:background="#FFEAFE"
    tools:context=".article_skincare">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="129dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/article"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="405dp"
        android:layout_height="664dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/title_article2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/category2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date2"
                android:textAlignment="center"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/articlenight" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/description2"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content2sub1"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des1"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2sub2"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:paddingTop="5dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/glowserum" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des2"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2sub3"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:paddingTop="5dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/extractserum" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des3"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2sub4"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:paddingTop="5dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/beetserum" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des4"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2sub5"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:paddingTop="5dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="271dp"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:srcCompat="@drawable/spotessence" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des5"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/content2des6"
                android:textColor="#000000"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                app:srcCompat="@drawable/ads" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>