<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEAFE"
    tools:context=".MainActivity">

    <!-- Add TextView to display the date -->

    <!-- Add CalendarView to display the Calendar -->

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="63dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textView2"
        android:background="#FFEAFE"
        android:fontFamily="@font/poppins_light"
        android:text="@string/beauty_calendartext"
        android:textColor="@android:color/background_dark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="HomeLayout"
        android:text="@string/slash"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="OnClick,TouchTargetSizeCheck" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="80dp"
        android:background="#C4C4C4"
        android:textColor="#FFFFFF"></CalendarView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/greencircle" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/orangecircle" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/yellowcircle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/exfoliate"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sheet_mask"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/face_yoga"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_9_00_3_every"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_9_00_4_every"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_9_00_6_every"
            android:textColor="#000000"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/btn_shape_round"
        android:text="@string/buttonplus"
        android:textColor="#0D47A1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar"
        android:layout_marginStart="100dp"
        android:layout_marginTop="155dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/add_routines"
        android:textColor="#000000"
        android:textSize="24sp" />

</RelativeLayout>
